--- a/gateway/package.json
+++ b/gateway/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "amqplib": "^0.6.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "multer": "^1.4.2"
