--- a/mailer/package.json
+++ b/mailer/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "amqplib": "^0.6.0",
+    "dotenv": "^8.2.0",
     "nodemailer": "^6.4.17"
   }
 }
