--- a/mailer/package.json
+++ b/mailer/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "amqplib": "^0.6.0",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "nodemailer": "^6.4.17"
   }
 }
