--- a/tms/package.json
+++ b/tms/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "amqplib": "^0.6.0",
+    "dotenv": "^8.2.0"
   }
 }
