--- a/translator/package.json
+++ b/translator/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "amqplib": "^0.6.0",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "multer": "^1.4.2"
   }
