--- a/translator/package.json
+++ b/translator/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "amqplib": "^0.6.0",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
