--- a/gateway/package.json
+++ b/gateway/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "amqplib": "^0.6.0",
     "axios": "^0.21.1",
