--- a/tms/package.json
+++ b/tms/package.json
@@ -7,7 +7,6 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "amqplib": "^0.6.0",
-    "dotenv": "^8.2.0"
+    "amqplib": "^0.6.0"
   }
 }
