--- a/translator/package.json
+++ b/translator/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "nanoid": "^3.1.20"
   }
 }
