--- a/tms/package.json
+++ b/tms/package.json
@@ -7,6 +7,8 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "amqplib": "^0.6.0"
+    "amqplib": "^0.6.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
   }
 }
