--- a/tms/package.json
+++ b/tms/package.json
@@ -4,12 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "jest"
   },
   "dependencies": {
     "amqplib": "^0.6.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "underscore": "^1.12.0"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
