--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "pm2 start ecosystem.config.js",
     "stop": "pm2 delete ecosystem.config.js",
     "test": "jest",
+    "test:unit": "yarn test:unit:gateway && yarn test:unit:tms",
+    "test:unit:gateway": "cd ./gateway && yarn test",
+    "test:unit:tms": "cd ./tms && yarn test",
     "install:all": "yarn && yarn install:gateway && yarn install:translator && yarn install:tms && yarn install:mailer",
     "install:gateway": "cd ./gateway && yarn",
     "install:translator": "cd ./translator && yarn",
