--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "pm2 start ecosystem.config.js",
     "stop": "pm2 delete ecosystem.config.js",
-    "test": "jest",
+    "test": "jest --silent",
     "test:unit": "yarn test:unit:gateway && yarn test:unit:tms",
     "test:unit:gateway": "cd ./gateway && yarn test",
     "test:unit:tms": "cd ./tms && yarn test",
