--- a/translator/package.json
+++ b/translator/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "jest"
   },
   "dependencies": {
     "amqplib": "^0.6.0",
@@ -12,5 +13,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nanoid": "^3.1.20"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
